--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1{
 }
 section{
     display: flex;
+    margin: 50px;
 }
 .new-one{
     width: 50%;
@@ -28,4 +29,11 @@ section{
 .new-two{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+    margin: 0%;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    margin: 0%;
 }
